# Invoice-splitter

./: .env.example  .gitignore  pyproject.toml
src/invoice_splitter/: _manual_create_table_test.py  app.py  config.py  models.py
src/invoice_splitter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/invoice_splitter/excel/: concepts.py  vendors.py  writer.py
src/invoice_splitter/rules/: _manual_test.py  common.py  registry.py  vendor_1254902_claro.py  vendor_1254926_cirion.py  vendor_1255036_akros.py  vendor_1255097_eikon.py  vendor_1260177_movistar.py  vendor_1261182_puntonet.py  vendor_1274957_sipbox.py  vendor_9999999_dummy.py  vendor_generic.py
src/invoice_splitter/ui/: main_window.py  split_editor.py
src/invoice_splitter/utils/: dates.py  logging.py  money.py
